fixed alignment issue in blog page

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -291,7 +291,7 @@
     }
 
     .archive__item-teaser {
-      margin-bottom: 2em;
+      margin-top: 1.4em;
     }
 
     a.btn::before {
@@ -332,7 +332,7 @@
     }
 
     .archive__item-teaser {
-      margin-bottom: 2em;
+      margin-top: 1.4em;
     }
 
     a.btn::before {
@@ -376,7 +376,7 @@
     }
 
     .archive__item-teaser {
-      margin-bottom: 2em;
+      margin-top: 1.4em;
     }
 
     a.btn::before {
